account page and funtion done
